<resources>
    <string name="app_name">Speakerbox Sample</string>
    <string name="tagline">Start where you are…</string>
    <string name="hint">Enter some text!</string>
    <string name="speak">Speak</string>
    <string name="speak_w_notify">Speak w/Notify</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>
    <string name="start_speaking">Started speaking</string>
    <string name="done_speaking">Finished speaking</string>
    <string name="error_speaking">Error speaking</string>
</resources>
